[workspace]

members = ["crates/*"]

[workspace.package]
authors = [
    "Martin Junghanns <github@s1ck.dev>",
    "Paul Horn <developer@knutwalker.de>",
]
rust-version = "1.65"
repository = "https://github.com/s1ck/graph"
edition = "2021"
license = "MIT"

[workspace.dependencies]
ahash = "0.8.2"
arrow = "27.0.0"
arrow-flight = "27.0.0"
async-trait = "0.1.58"
atoi = "2.0.0"
atomic = "0.5.1"
atomic_float = "0.1.0"
byte-slice-cast = "1.2.2"
clap = { version = "4.0", features = ["derive"] }
criterion = { version = "0.4.0", features = ["html_reports"] }
dashmap = "5.4.0"
delegate = "0.8.0"
env_logger = "0.9.3"
fast-float = "0.2.0"
float-ord = "0.3.2"
futures = "0.3.25"
fxhash = "0.2.1"
gdl = "0.2.7"
itertools = "0.10.5"
linereader = "0.4.0"
log = "0.4.17"
memmap2 = "0.5.8"
nanorand = "0.7.0"
num = "0.4.0"
num_cpus = "1.14.0"
num-format = "0.4.3"
numpy = "0.17.2"
page_size = "0.4.2"
parking_lot = "0.12.1"
pico-args = "0.5.0"
polars = { version = "0.25.1", default_features = false, features = ["fmt"] }
pyo3 = "0.17.3"
pyo3-log = "0.7.0"
rand = "0.8.5"
rayon = "1.5.3"
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }
tempfile = "3.3.0"
thiserror = "1.0.37"
tokio = "1.21.2"
tonic = "0.8.2"

[workspace.metadata.release]
pre-release-commit-message = "Release {{crate_name}} {{version}}"
post-release-commit-message = "Start development of {{next_version}}"
