[package]
name = "graph"
version = "0.2.1"
authors = [
    "Martin Junghanns <github@s1ck.dev>",
    "Paul Horn <developer@knutwalker.de>",
]
description = "A library of high-performant graph algorithms."
keywords = ["graph", "algorithms", "parallel"]
repository = "https://github.com/s1ck/graph"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash.workspace = true
atomic_float.workspace = true
clap = { workspace = true, optional = true }
graph_builder = { path = "../builder", version = "^0.2.0" }
log.workspace = true
num-format.workspace = true
nanorand.workspace = true
rayon.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
graph_builder = { path = "../builder", version = "^0.2.0", features = ["gdl"] }
