[package]
name = "graph_app"
version = "0.1.2"
authors = [
    "Martin Junghanns <github@s1ck.dev>",
    "Paul Horn <developer@knutwalker.de>",
]
description = "A binary to execute graph algorithms."
keywords = ["graph", "algorithms", "parallel"]
repository = "https://github.com/s1ck/graph"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-slice-cast = "1.2.1"
env_logger = "0.9.0"
float-ord = "0.3.2"
log = "0.4.14"
pico-args = "0.4.2"
rayon = "1.5.1"

[dependencies.graph]
path = "../algos"
version = "^0.2.0"
features = ["clap"]

[dependencies.kommandozeile]
git = "https://github.com/knutwalker/kommandozeile"
default-features = false
features = ["args_glob_expand", "args_file", "clap_app_color", "clap_verbose", "setup_clap"]

[[bin]]
name = "app"
path = "src/app.rs"
