[package]
name = "graph_app"
version = "0.1.3"
authors = [
    "Martin Junghanns <github@s1ck.dev>",
    "Paul Horn <developer@knutwalker.de>",
]
description = "A binary to execute graph algorithms."
keywords = ["graph", "algorithms", "parallel"]
repository = "https://github.com/s1ck/graph"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-slice-cast.workspace = true
env_logger.workspace = true
float-ord.workspace = true
log.workspace = true
pico-args.workspace = true
rayon.workspace = true

[dependencies.graph]
path = "../algos"
version = "^0.2.0"
features = ["clap"]

[dependencies.kommandozeile]
git = "https://github.com/knutwalker/kommandozeile"
default-features = false
features = ["args_glob_expand", "args_file", "clap_app_color", "clap_verbose", "setup_clap"]

[[bin]]
name = "app"
path = "src/app.rs"
