[package]
name = "graph_app"
version = "0.1.3"
description = "A binary to execute graph algorithms."
keywords = ["graph", "algorithms", "parallel"]
publish = false
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-slice-cast.workspace = true
env_logger.workspace = true
float-ord.workspace = true
log.workspace = true
pico-args.workspace = true
rayon.workspace = true

[dependencies.graph]
path = "../algos"
version = "^0.2.0"
features = ["clap"]

[dependencies.kommandozeile]
git = "https://github.com/knutwalker/kommandozeile"
default-features = false
features = ["args_glob_expand", "args_file", "clap_app_color", "clap_verbose", "setup_clap"]

[[bin]]
name = "app"
path = "src/app.rs"
