[package]
name = "bench-util"
version = "0.0.1"
description = "Benchmark utilities."
keywords = ["benchmark", "util", "graph"]
publish = false
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
graph_builder = { path = "../builder", version = "^0.3.1", features = ["dotgraph", "gdl"] }
rand.workspace = true
