[package]
name = "bench_util"
version = "0.0.1"
description = "Benchmark utilities."
keywords = ["benchmark", "util", "graph"]
publish = false
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-compression.workspace = true
directories.workspace = true
futures.workspace = true
graph_builder = { path = "../builder", version = "^0.4.0", features = ["dotgraph", "gdl"] }
rand.workspace = true
reqwest.workspace = true
tokio-tar.workspace = true
tokio-util.workspace = true
tokio.workspace = true
