[package]
name = "graph_builder"
version = "0.2.1"
authors = [
    "Martin Junghanns <github@s1ck.dev>",
    "Paul Horn <developer@knutwalker.de>",
]
description = "A building block for high-performant graph algorithms."
keywords = ["graph", "builder", "csr", "algorithms"]
repository = "https://github.com/s1ck/graph"
edition = "2021"
license = "MIT"

[dependencies]
atoi.workspace = true
atomic.workspace = true
byte-slice-cast.workspace = true
delegate.workspace = true
fast-float.workspace = true
fxhash.workspace = true
gdl = { workspace = true, optional = true }
linereader.workspace = true
log.workspace = true
memmap2.workspace = true
num.workspace = true
num-format.workspace = true
num_cpus.workspace = true
page_size.workspace = true
parking_lot.workspace = true
rayon.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
rand.workspace = true
tempfile.workspace = true

[[bench]]
name = "edgelist"
harness = false

[[bench]]
name = "csr"
harness = false

[package.metadata.docs.rs]
features = ["gdl"]
