[package]
name = "graph_builder"
version = "0.4.1"
description = "A building block for high-performant graph algorithms."
keywords = ["graph", "builder", "csr", "algorithms"]
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
atoi.workspace = true
atomic.workspace = true
byte-slice-cast.workspace = true
dashmap.workspace = true
delegate.workspace = true
fast-float2.workspace = true
fxhash.workspace = true
gdl = { workspace = true, optional = true }
linereader.workspace = true
log.workspace = true
memmap2.workspace = true
num.workspace = true
num-format.workspace = true
num_cpus.workspace = true
page_size.workspace = true
parking_lot.workspace = true
rayon.workspace = true
thiserror.workspace = true

[dev-dependencies]
async-compression.workspace = true
criterion.workspace = true
directories.workspace = true
futures.workspace = true
rand.workspace = true
reqwest.workspace = true
tap.workspace = true
tempfile.workspace = true
tokio-tar.workspace = true
tokio-util.workspace = true
tokio.workspace = true

[features]
force_fallback_impl = []
dotgraph = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(has_new_uninit)',
    'cfg(has_maybe_uninit_write_slice)',
    'cfg(has_slice_partition_dedup)',
    'cfg(has_doc_cfg)',
] }

[[bench]]
name = "edgelist"
harness = false

[[bench]]
name = "topology"
harness = false

[[bench]]
name = "dotgraph"
harness = false

[package.metadata.docs.rs]
features = ["gdl", "dotgraph"]
