[package]
name = "graph_server"
version = "0.1.0"
authors = [
    "Martin Junghanns <github@s1ck.dev>",
    "Paul Horn <developer@knutwalker.de>",
]
description = "A server for managing graphs and running algorithms."
keywords = ["arrow", "grpc", "graph", "algorithms"]
repository = "https://github.com/s1ck/graph"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "10.0.0"
arrow-flight = "10.0.0"
async-trait = "0.1.36"
clap = { version = "3.1.0", features = ["derive"] }
env_logger = "0.9.0"
futures = "0.3.19"
graph = { path = "../algos", version = "^0.1.0", features = ["serde"] }
itertools = "0.10.3"
log = "0.4.14"
parking_lot = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.0"
tonic = "0.6"
