[package]
name = "graph_server"
version = "0.1.0"
authors = [
    "Martin Junghanns <github@s1ck.dev>",
    "Paul Horn <developer@knutwalker.de>",
]
description = "A server for managing graphs and running algorithms."
keywords = ["arrow", "grpc", "graph", "algorithms"]
repository = "https://github.com/s1ck/graph"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow.workspace = true
arrow-flight.workspace = true
async-trait.workspace = true
clap.workspace = true
env_logger.workspace = true
futures.workspace = true
graph = { path = "../algos", version = "^0.2.0", features = ["serde"] }
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
