[package]
name = "graph_server"
version = "0.2.0"
description = "A server for managing graphs and running algorithms."
keywords = ["arrow", "grpc", "graph", "algorithms"]
publish = false
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow.workspace = true
arrow-flight.workspace = true
async-trait.workspace = true
clap.workspace = true
env_logger.workspace = true
futures.workspace = true
graph = { path = "../algos", version = "^0.3.1", features = ["serde"] }
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
