[package]
name = "unladen_swallow"
version = "0.2.1"
authors = [
    "Martin Junghanns <github@s1ck.dev>",
    "Paul Horn <developer@knutwalker.de>",
]
description = "A library of high-performant graph algorithms."
keywords = ["graph", "algorithms", "parallel"]
repository = "https://github.com/s1ck/graph"
edition = "2021"
license = "MIT"
publish = false
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "unladen_swallow"
crate-type = ["cdylib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
graph = { path = "../algos", version = "^0.2.0" }
log.workspace = true
numpy.workspace = true
pyo3-log.workspace = true
rayon.workspace = true

[dependencies.pyo3]
workspace = true
features = ["macros", "pyproto", "auto-initialize", "abi3", "abi3-py37"]
default-features = false
