[package]
name = "graph_mate"
version = "0.2.1"
description = "A library of high-performant graph algorithms."
keywords = ["graph", "algorithms", "parallel"]
publish = false
readme = "../../README.md"
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "graph_mate"
crate-type = ["cdylib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
graph = { path = "../algos", version = "^0.2.0" }
log.workspace = true
numpy.workspace = true
pyo3-log.workspace = true
rayon.workspace = true

[dependencies.pyo3]
workspace = true
features = ["macros", "pyproto", "auto-initialize", "abi3", "abi3-py38"]
default-features = false
